add examinations
Done:
- add component
- add api calls in /api/api/ambulance-wl.openapi.yaml
- add api call into web-api/api/ambulance-wl.openapi.yaml
- add frontend routes
